Closed
Bug 1712180
Opened 4 years ago
Closed 4 years ago
Named properties object is not spec-perfect
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox90 | --- | fixed |
People
(Reporter: shvaikalesh, Assigned: peterv)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.2 Safari/605.1.15
Steps to reproduce:
Please find detailed list of Firefox issues in WPT PR: https://github.com/web-platform-tests/wpt/pull/27970
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → peterv
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 1•4 years ago
|
||
- [[GetOwnProperty]] doesn't return supported properties that are indices.
- Reflect.set and Reflect.defineProperty incorrectly throw TypeError in case of failure.
- [[OwnPropertyKeys]] is not an ordinary method.
| Assignee | ||
Comment 2•4 years ago
|
||
| Assignee | ||
Comment 3•4 years ago
|
||
Depends on D115637
Updated•4 years ago
|
Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Updated•4 years ago
|
Severity: -- → S3
Updated•4 years ago
|
Attachment #9222846 -
Attachment description: WIP: Bug 1712180 - Make defineProperty on the Window named properties object only throw in strict mode. → Bug 1712180 - Make defineProperty on the Window named properties object only throw in strict mode. r?evilpie!
Updated•4 years ago
|
Attachment #9222847 -
Attachment description: WIP: Bug 1712180 - Make GetOwnProperty on the Window named properties object return supported properties that are indices. → Bug 1712180 - Make GetOwnProperty on the Window named properties object return supported properties that are indices. r?evilpie!
Pushed by pvanderbeken@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b870e4d668ec
Make defineProperty on the Window named properties object only throw in strict mode. r=evilpie
https://hg.mozilla.org/integration/autoland/rev/3907d3f0c3f2
Make GetOwnProperty on the Window named properties object return supported properties that are indices. r=evilpie
Comment 5•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/b870e4d668ec
https://hg.mozilla.org/mozilla-central/rev/3907d3f0c3f2
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox90:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Comment 6•4 years ago
|
||
Seems like there is still a problem with [[OwnPropertyKeys]]: https://wpt.live/WebIDL/ecmascript-binding/window-named-properties-object.html
You need to log in
before you can comment on or make changes to this bug.
Description
•