Bug 1712180 - Make GetOwnProperty on the Window named properties object return supported properties that are indices. r=evilpie

Differential Revision: https://phabricator.services.mozilla.com/D115638